--- a/PuntoDeVenta/PuntoDeVenta.Master
+++ b/PuntoDeVenta/PuntoDeVenta.Master
@@ -15,6 +15,11 @@
         
         </asp:ContentPlaceHolder>
         <h1>Hola Mundo!</h1>
+        <div class="form">
+            <asp:Repeater runat="server">
+
+            </asp:Repeater>
+        </div>
     </div>
     </form>
 </body>
